Начал "управление сессиями" в руководстве винклиента. Это почти финал.

--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.SetCurrentEmployee_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.SetCurrentEmployee_MT.adoc
@@ -23,7 +23,7 @@ employee:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка будет возвращена, если текущий владелец сессии не входит в группу *{dv-admins-serv}* или _{dv} Power Users_.
+|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка будет возвращена, если текущий владелец сессии не входит в группу *{dv-admins-serv}* или _{dv-power-users}_.
 |===
 
 == Примеры
