--- a/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IUserProfileCardService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IUserProfileCardService_IN.adoc
@@ -48,7 +48,7 @@ Console.WriteLine(value);
 <.> Задаем значение свойства.
 <.> Получаем значение свойства, если свойство отсутствует, что в контексте примера конечно невозможно, то вернется пуста строка.
 
-Еще один пример использования сервиса -- создание и установка личной папки пользователя
+Ещё один пример использования сервиса -- создание и установка личной папки пользователя
 
 [source,csharp]
 ----
