--- a/modules/Workflow/pages/Runtime/ProcessInfo_CL.adoc
+++ b/modules/Workflow/pages/Runtime/ProcessInfo_CL.adoc
@@ -14,7 +14,7 @@ public class ProcessInfo
 
 == Конструкторы
 
-[width="100%",cols="39%,61%",options="header"]
+[cols="39%,61%",options="header"]
 |===
 |Имя |Описание
 |`ProcessInfo(Process, Library)` |Инициализирует новый экземпляр типа `ProcessInfo` с помощью указанного значения.
@@ -23,7 +23,7 @@ public class ProcessInfo
 
 == Свойства
 
-[width="100%",cols="39%,61%",options="header"]
+[cols="39%,61%",options="header"]
 |===
 |Имя |Описание
 |`ActivePassStates` |Возвращает список с информацией об активных проходах функций.
@@ -45,7 +45,7 @@ public class ProcessInfo
 
 == Методы
 
-[width="100%",cols="39%,61%",options="header"]
+[cols="39%,61%",options="header"]
 |===
 |Имя |Описание
 |`AddLogMessage(ActionTypeEnum, String, Int32, String, String, String, String, String)` |Создаёт записи в журнале работы Workflow.
