--- a/modules/appendix/pages/controls/obsolete/BoundChooseBox.adoc
+++ b/modules/appendix/pages/controls/obsolete/BoundChooseBox.adoc
@@ -32,7 +32,7 @@ image::ROOT:bound-choose-box-context.png[Контекстного меню "Boun
 .Контекстного меню кнопки выбора
 image::ROOT:select-button-context.png[Контекстного меню кнопки выбора]
 
-Прежде чем приступить к использованию элемента управления `_BoundChooseBox_`, необходимо подготовить источник данных для него. В качестве источника данных может выступать объект `_RowDataSource_`, предназначенный для работы со строками секции карточки. Однако здесь необходимо учесть один нюанс: источник данных `_RowDataSource_` может возвращать сразу несколько строк (например, для секции коллекционного типа), а элемент управления `_BoundChooseBox_` может отображать только значение конкретного поля одной конкретной строки. Чтобы разрешить это противоречие, вводится еще один промежуточный объект -- `_BindingSource_`, который предназначен как раз, чтобы выбрать одну конкретную строку из набора, возвращаемого `_RowDataSource_`. Общую картину связывания данных в этом случае можно представить как на рисунке ниже.
+Прежде чем приступить к использованию элемента управления `_BoundChooseBox_`, необходимо подготовить источник данных для него. В качестве источника данных может выступать объект `_RowDataSource_`, предназначенный для работы со строками секции карточки. Однако здесь необходимо учесть один нюанс: источник данных `_RowDataSource_` может возвращать сразу несколько строк (например, для секции коллекционного типа), а элемент управления `_BoundChooseBox_` может отображать только значение конкретного поля одной конкретной строки. Чтобы разрешить это противоречие, вводится ещё один промежуточный объект -- `_BindingSource_`, который предназначен как раз, чтобы выбрать одну конкретную строку из набора, возвращаемого `_RowDataSource_`. Общую картину связывания данных в этом случае можно представить как на рисунке ниже.
 
 .Алгоритм связывания данных
 image::ROOT:data-binding-algorithm.png[Алгоритм связывания данных]
