--- a/modules/appendix/pages/controls/obsolete/data-source/CardDataSource.adoc
+++ b/modules/appendix/pages/controls/obsolete/data-source/CardDataSource.adoc
@@ -9,7 +9,7 @@
 .Мастер настройки "CardDataSource"
 image::ROOT:card-data-source-master.png[Мастер настройки "CardDataSource"]
 
-В выпадающем списке представлены все имеющиеся в проекте объекты-сессии (`SessionSource`), из которых нужно выбрать тот, который будет использован для получения данных. При выборе конкретного объекта сессии, в поле "Connection string" отображаются детальные сведения о выбранном соединении. Кнопка "*New session source*" позволяет создать новый объект сессии, если он еще не добавлен в проект.
+В выпадающем списке представлены все имеющиеся в проекте объекты-сессии (`SessionSource`), из которых нужно выбрать тот, который будет использован для получения данных. При выборе конкретного объекта сессии, в поле "Connection string" отображаются детальные сведения о выбранном соединении. Кнопка "*New session source*" позволяет создать новый объект сессии, если он ещё не добавлен в проект.
 
 После выбора соединения и перехода на следующий шаг предлагается указать тип карточек, с которыми будет работать данный источник данных.
 
