--- a/modules/appendix/pages/controls/obsolete/data-source/InfoRowDataSource.adoc
+++ b/modules/appendix/pages/controls/obsolete/data-source/InfoRowDataSource.adoc
@@ -7,7 +7,7 @@
 .Мастер настройки "InfoRowDataSource"
 image::ROOT:info-row-data-source-master.png[Мастер настройки "InfoRowDataSource"]
 
-Поскольку представление описывает всего лишь способ отображения данных, а не сами данные -- то необходимо указать еще `источник` данных для представления. Это можно сделать на следующем шаге мастера.
+Поскольку представление описывает всего лишь способ отображения данных, а не сами данные -- то необходимо указать ещё `источник` данных для представления. Это можно сделать на следующем шаге мастера.
 
 .Настройка источника данных для представления
 image::ROOT:create-data-source.png[Настройка источника данных для представления]
