--- a/modules/appendix/pages/properties-page-activation-parameters.adoc
+++ b/modules/appendix/pages/properties-page-activation-parameters.adoc
@@ -3,7 +3,7 @@
 Таблица, приведенная ниже, содержит список допустимых параметров активации страницы свойств карточки, которые могут быть приняты xref:solutions:extensions/winclient.adoc[расширением] типа "Страницы свойств".
 
 .Параметры активации
-[width="100%",cols="15%,85%",options="header"]
+[cols="15%,85%",options="header"]
 |===
 |Тип страницы свойств |Параметры::
 |`NavPropertyPageTypes.Folder`
