--- a/modules/bpms/pages/scenarios-develop.adoc
+++ b/modules/bpms/pages/scenarios-develop.adoc
@@ -95,7 +95,7 @@ public ExecResultEnum Execute(ProcessInfo process, PassState passInfo)
 
 Сигнатура приведенного метода не является жесткой -- список параметров может формироваться разработчиком _сценария_. Допускается использование параметров определённых типов, указанных ниже.
 
-[width="100%",cols="25%,75%",options="header"]
+[cols="25%,75%",options="header"]
 |===
 |Тип |Привязка к объекту
 
