--- a/modules/cards/pages/access-control.adoc
+++ b/modules/cards/pages/access-control.adoc
@@ -4,7 +4,7 @@
 
 Право дается или запрещается пользователю при помощи объекта ACE (`access control entry`), который задаёт маску прав. Права могут быть даны (`allowed`) или запрещены (`denied`) конкретному пользователю или группе (`security principal`).
 
-ACE объединяются в список ACL (`access control list`). DACL (`discretionary access control list`) хранится в описателе прав (`security descriptor`), в котором, кроме списка DACL, есть еще информация о владельце объекта (`owner`), а также настройки аудита в виде списка SACL (`system access control list`). Кроме того, начиная с версии 4.3, поддерживается использование в дескрипторе метки уровня доступа (`mandatory access control, MAC`).
+ACE объединяются в список ACL (`access control list`). DACL (`discretionary access control list`) хранится в описателе прав (`security descriptor`), в котором, кроме списка DACL, есть ещё информация о владельце объекта (`owner`), а также настройки аудита в виде списка SACL (`system access control list`). Кроме того, начиная с версии 4.3, поддерживается использование в дескрипторе метки уровня доступа (`mandatory access control, MAC`).
 
 [NOTE]
 ====
