--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -311,7 +311,7 @@ image::ROOT:card-sample-structure.png[Структура экземпляра к
 . Выбрать строку из полученной коллекции.
 . Получить значение нужного поля по его псевдониму: `BaseCardSectionRow["FieldAlias"]`.
 
-.Если для типа карточки была реализована собственная объектная модель, то обращение к данным карточки будут выглядеть еще проще:
+.Если для типа карточки была реализована собственная объектная модель, то обращение к данным карточки будут выглядеть ещё проще:
 . Получить экземпляр карточки, к примеру, типа `SampleCard` -- унаследован от типа `BaseCard`.
 . Получить коллекцию строк секции, из соответствующего публичного свойства класса: `SampleCard.SampleSection`.
 . Выбрать нужную строку секции: `SampleCard.SampleSection[0]`. Если секция является плоской и это учтено при реализации объектной модели, то данный шаг пропускается.
