--- a/modules/cards/pages/signing-encryption.adoc
+++ b/modules/cards/pages/signing-encryption.adoc
@@ -62,7 +62,7 @@ foreach (InfoRow cryptrow in coll)
 
 На данном уровне API подписание и шифрование реализовано для карточек типа _Документ_ и _Задание_. Ниже представлена сводная таблица методов для работы с данной функциональностью.
 
-[width="100%",cols="15%,85%",options="header"]
+[cols="15%,85%",options="header"]
 |===
 |Метод |Назначение
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.AddSignature_MT.adoc[IDocumentService.AddSignature(Document, X509Certificate2, Boolean, ICollection<CardFieldSetting>)]`
