--- a/modules/schemas/pages/release/BackOffice/CardDocument.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardDocument.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |480 |
@@ -75,7 +75,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -91,7 +91,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -106,7 +106,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Ссылка на процесс |`refcardid` | a|
@@ -125,7 +125,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileId` |Файл |`refcardid` | a|
@@ -150,7 +150,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Получатели"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ReceiverStaff` |Получатель |`refid` | |
@@ -164,7 +164,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Согласующие"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Approver` |Согласующие |`refid` | |
@@ -178,7 +178,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Подписанты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Signer` |Подписано |`refid` | |
@@ -192,7 +192,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Отправитель контрагент"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SenderPerson` |Сотрудник-отправитель |`refid` | |
@@ -209,7 +209,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Получатели контрагенты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ReceiverPartnerCo` |Получатель-организация контрагента |`refid` | |
@@ -225,7 +225,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Ознакомлены"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AcquaintancePersons` |На ознакомление |`refid` | |
@@ -239,7 +239,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Утверждено"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Confirm` |Утвержден |`refid` | |
@@ -253,7 +253,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Договор"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ContractDate` |Дата заключения договора |`datetime` | |
@@ -332,7 +332,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Лист согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Position` |Должность |`refid` | |
@@ -368,7 +368,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Согласование"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Reconciliation` |Активное согласование |`refcardid` | a|
@@ -397,7 +397,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CommentAuthor` |Автор комментария |`refid` | |
@@ -413,7 +413,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Контроль"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ControlTypeId` |Идентификатор контроля |`refid` | |
@@ -431,7 +431,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Адресаты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`EmployeeId` |Идентификатор сотрудника |`refid` | |
@@ -441,7 +441,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenAsCard` |`9A696D05-05CB-4C59-82BB-00F86D45BE41` |Открытие карточки
@@ -454,7 +454,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenAsCard` |`42153E98-839F-48A2-A77E-83EC52F1F74D` |Открыть карточку
