--- a/modules/schemas/pages/release/BackOffice/CardReconcile.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardReconcile.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -30,7 +30,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -45,7 +45,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Ссылка на процесс |`refcardid` | a|
@@ -64,7 +64,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Информация о согласовании"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Number` |Номер |`refid` | |
@@ -113,7 +113,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системная секция"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Hint` |Подсказка |`unistring` | |
@@ -144,7 +144,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Список участников согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
@@ -164,7 +164,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
@@ -178,7 +178,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`File` |Файл |`refcardid` | a|
@@ -206,7 +206,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Лист согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
@@ -255,7 +255,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ParticipantsCanEdit` |Участники могут прикреплять новые версии файлов |`bool` | |
@@ -289,7 +289,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Таблица комментариев Инициатор"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Date` |Дата |`datetime` | |
@@ -310,7 +310,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Таблица файлов для согласующего"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Author` |Автор версии |`refid` | |
@@ -326,7 +326,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Варианты завершения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название результата |`unistring` | |
@@ -341,7 +341,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CommentAuthor` |Автор комментария |`refid` | |
@@ -357,7 +357,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Таблица маршуртов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Path` |Маршрут |`refcardid` | |Идентификатор типа: `6CA327B1-C44F-4751-82C0-17FB33747E46`
