--- a/modules/schemas/pages/release/BackOffice/CardSurveyList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardSurveyList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Опросы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` | |
@@ -37,7 +37,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ответы на вопросы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Respondent` |Респондент |`refid` | |
@@ -57,7 +57,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Набор вопросов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Question` |Вопрос |`refid` | |
@@ -73,7 +73,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Набор значений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Id` |Индекс |`int` | |
@@ -109,7 +109,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Вопросы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DataType` |Тип значения |`enum` | a|.Значения:
@@ -152,7 +152,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value` |Значение перечисления |`int` | |
