--- a/modules/schemas/pages/release/BackOffice/RefBaseUniversal.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefBaseUniversal.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Узлы справочника"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |512 |
@@ -37,7 +37,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Строка справочника"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Имя |`unistring` |512 |
@@ -55,7 +55,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Отображаемые поля"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FieldName` |Field name` |`unistring` |512 |
