--- a/modules/schemas/pages/release/BackOffice/RefCategories.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefCategories.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RootFolderID` |ID корневой папки |`refid` | |
@@ -28,7 +28,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название категории |`unistring` |128 |
@@ -51,7 +51,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Связанные категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
