--- a/modules/schemas/pages/release/BackOffice/RefKinds.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefKinds.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Типы карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardTypeId` |Идентификатор типа карточки |`uniqueid` | |
@@ -32,7 +32,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Виды карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -57,7 +57,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TemplateId` |Идентификатор шаблона |`refcardid` | a|
@@ -87,7 +87,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки переменных"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`VariableId` |Идентификатор переменной процесса |`refid` | |
@@ -108,7 +108,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Переходы состояний"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State`BranchId` |Переход |`refid` | |
@@ -122,7 +122,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Операции процесса"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`OperationId` |Ссылка на операцию |`refid` | |
@@ -136,7 +136,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки расширения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ExtensionId` |Идентификатор расширения |`refid` | |
@@ -152,7 +152,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Группы настроек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -168,7 +168,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип свойства |`int` | |
@@ -189,7 +189,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройки способов создания карточки вида"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Mode` |Идентификатор способа создания |`uniqueid` | |
@@ -219,7 +219,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Расширения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeName` |Полное имя типа |`string` | |
