--- a/modules/schemas/pages/release/BackOffice/RefNumerationRules.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefNumerationRules.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Правила"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RuleName` |Название правила |`unistring` |128 |
@@ -32,7 +32,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`PrefixType` |Тип префикса |`enum` | a|.Значения:
@@ -57,7 +57,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Условия"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionID` |Раздел |`uniqueid` | |
@@ -74,7 +74,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Нумераторы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumeratorID` |Нумератор |`refcardid` | a|
