--- a/modules/schemas/pages/release/BackOffice/RefStaff.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefStaff.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Подразделения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |1024 |
@@ -86,7 +86,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FirstName` |Имя |`unistring` |32 |
@@ -182,7 +182,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Заместители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -210,7 +210,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Падежи имени"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NameCase` |Падеж имени |`enum` | a|.Значения:
@@ -233,7 +233,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Фотографии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Picture` |Фотография |image` | |
@@ -252,7 +252,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства для сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -309,7 +309,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления для сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -324,7 +324,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -339,7 +339,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Адреса"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AddressType` |Тип адреса |`enum` | a|.Значения:
@@ -360,7 +360,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Формат отображения сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -378,7 +378,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля сотрудников подразделения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -395,7 +395,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля подчиненных подразделений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -412,7 +412,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -502,7 +502,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -517,7 +517,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -532,7 +532,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Разделы свойств"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionName` |Название раздела |`unistring` |128 |
@@ -557,7 +557,7 @@
 * Тип секции: `tree`
 
 ."Поля секции "Группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -582,7 +582,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Группа"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`EmployeeID` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -606,7 +606,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -623,7 +623,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Папки группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FolderId` |Идентификатор папки |`refid` | |
@@ -638,7 +638,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Роли"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -661,7 +661,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Содержимое"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`refid` |ID ссылки |`refid` | |
@@ -680,7 +680,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Папки роли"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FolderId` |Идентификатор папки |`refid` | |
@@ -695,7 +695,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Должности"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |1024 |
@@ -719,7 +719,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Пользовательские настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Reserved` |Зарезервировано |`bool` | |
@@ -755,7 +755,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Соответствие полей ADs"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FieldName` |Имя поля |`string` |128 |
@@ -770,7 +770,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -787,7 +787,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля подразделений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -804,7 +804,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
