--- a/modules/schemas/pages/release/Core/FolderTypes.adoc
+++ b/modules/schemas/pages/release/Core/FolderTypes.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Типы папок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -56,7 +56,7 @@
 * Тип секции: `coll`
 
 .Поля секции "разрешённые виды карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Идентификатор типа карточки |`uniqueid` | |
@@ -71,7 +71,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Представления папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ViewID` |Идентификатор представления |`uniqueid` | |
@@ -86,7 +86,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Шаблоны папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TemplateID` |Поле |`refid` | |
@@ -100,7 +100,7 @@
 * Тип секции: `coll`
 
 .Поля секции "разрешённые виды папок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FolderTypeID` |Вид папки |`refid` | |
