--- a/modules/schemas/pages/release/Core/RefComponents.adoc
+++ b/modules/schemas/pages/release/Core/RefComponents.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Группы файлов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -33,7 +33,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileId` |Файл |`fileid` | |
