--- a/modules/schemas/pages/release/Core/VersionedFile.adoc
+++ b/modules/schemas/pages/release/Core/VersionedFile.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Общая информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название файла |`unistring` |256 |
@@ -38,7 +38,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Комментарии файла"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Comment` |Комментарий |`unitext` | |
@@ -54,7 +54,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Версии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Version` |Уникальный номер версии |`int` | |
@@ -74,7 +74,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ассоциированные файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileID` |Идентификатор файла |`fileid` | |
@@ -90,7 +90,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Комментарии версии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Comment` |Комментарий |`unitext` | |
