--- a/modules/schemas/pages/release/TakeOffice/CardApproval.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardApproval.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема документа |`unistring` |544 |
@@ -87,7 +87,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Comment` |Комментарий |`unistring` |2048 |
@@ -107,7 +107,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Журнал"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ActionDate` |Дата события |`datetime` | |
@@ -140,7 +140,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип ссылки |`refid` | a|.Поля ссылки:
@@ -167,7 +167,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Уведомления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Event` |Событие |`enum` | a|.Значения:
@@ -199,7 +199,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Циклы согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Cycle` |Цикл |`int` | |
@@ -244,7 +244,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Согласующие лица"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ApproverID` |Согласующее лицо |`uniqueid` | |
@@ -284,7 +284,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Заместители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DeputyID` |Заместитель |`refid` | a|.Поля ссылки:
@@ -301,7 +301,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Права просмотра"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ApproverRowID` |Согласующее лицо |`refid` | |
@@ -316,7 +316,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardFileID` |Файл |`refcardid` | a|
@@ -369,7 +369,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Смешанный тип рассылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -386,7 +386,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Блок согласования для смешанного типа"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -401,7 +401,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Подчиненные согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ApprovalID` |Согласование |`refcardid` | a|
@@ -417,7 +417,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`Approving` |`31B8A420-0E05-4050-BC42-3E1DFE9B05DF` |Согласование
@@ -429,7 +429,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`Edit` |`663006E9-67A4-4E29-BE75-CFC6F29D4D74` |Редактировать
