--- a/modules/schemas/pages/release/TakeOffice/CardArchive.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardArchive.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема документа |`unistring` |512 |
@@ -71,7 +71,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип ссылки |`refid` | a|.Поля ссылки:
@@ -97,7 +97,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -155,7 +155,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -170,7 +170,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -186,7 +186,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -201,7 +201,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Журнал передач"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`IsReceived` |Принято |`bool` | |
@@ -223,7 +223,7 @@
 == Режимы работы карточки
 
 .Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`4085CD3E-4A76-45A3-9ED6-444F20A30EEA` |Открыть карточку
@@ -232,7 +232,7 @@
 == Действия карточки
 
 .Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`2AC480F5-6886-4928-A43D-A10DD6133664` |Открыть карточку
