--- a/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
+++ b/modules/schemas/pages/release/TakeOffice/RefTypes.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Виды документов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -95,7 +95,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -180,7 +180,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -195,7 +195,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -211,7 +211,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Поля карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FieldAlias` |Название поля |`string` |128 |
@@ -255,7 +255,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Права на заполнение"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`refid` |ID ссылки |`refid` | |
@@ -274,7 +274,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники по умолчанию"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -306,7 +306,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Формат дайджеста карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -325,7 +325,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Закладки карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Tab` |Закладка |`enum` | a|.Значения:
@@ -359,7 +359,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Разделы закладки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionName` |Название раздела |`unistring` |128 |
@@ -380,7 +380,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Права на закладку"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`refid` |ID ссылки |`refid` | |
@@ -400,7 +400,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Родительские виды"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ParentTypeID` |Родительский вид |`refid` | a|.Поля ссылки:
@@ -416,7 +416,7 @@
 * Тип секции: `coll`_
 
 ."Поля секции "Права на карточку"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`refid` |ID ссылки |`refid` | |
@@ -436,7 +436,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Сценарии кнопок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -457,7 +457,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "разрешённые дочерние типы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Тип |`refid` | a|.Поля ссылки:
@@ -473,7 +473,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -488,7 +488,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Формат названия заданий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -507,7 +507,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Уведомления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Event` |Cобытие |`enum` | a|.Значения:
@@ -547,7 +547,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Виды ссылок по умолчанию"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardTypeID` |Тип карточки |`uniqueid` | |
@@ -578,7 +578,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Доступные ссылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LinkID` |Тип ссылки |`refid` | a|.Поля ссылки:
@@ -593,7 +593,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Функции карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Item` |Элемент |`enum` | a|.Значения:
@@ -629,7 +629,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Права на функцию"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`refid` |ID ссылки |`refid` | |
@@ -649,7 +649,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Пользовательские сценарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ScriptType` |Тип сценария |`enum` | a|.Значения:
@@ -675,7 +675,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Пользовательские типы карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardTypeID` |Тип карточки |`uniqueid` | |
