--- a/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
+++ b/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |544 |
@@ -126,7 +126,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Исполнение задания"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ActualStartDate` |Действительная дата начала |`datetime` | |
@@ -194,7 +194,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Настройки задания"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CanReject` |Право на отказ |`bool` | |
@@ -243,7 +243,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Семантика"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TaskState` |Состояния задания |`enum` | a|.Значения:
@@ -274,7 +274,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`PerformerID` |Исполнитель |`refid` | |
@@ -306,7 +306,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Делегаты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DelegateID` |Делегат |`refid` | |
@@ -342,7 +342,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Текущие исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`PerformerID` |Исполнитель |`refid` | a|.Поля ссылки:
@@ -400,7 +400,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -460,7 +460,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления для свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -475,7 +475,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Выбранные значения свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -491,7 +491,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Журнал работы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Action` |Событие |`enum` | a|.Значения:
@@ -551,7 +551,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CreationDate` |Дата комментария |`datetime` | |
@@ -573,7 +573,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Ссылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -604,7 +604,7 @@
 * Тип секции: `tree`
 
 ."Поля секции "Параметры завершения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectionName` |Название выбора |`unistring` |128 |
@@ -650,7 +650,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Значения перечисления параметра завершения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -665,7 +665,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Выбранные значения параметра завершения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`unistring` |512 |
@@ -680,7 +680,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Подчиненные задания"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TaskID` |Задание |`refcardid` | a|
@@ -707,7 +707,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Ссылки в карточке"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -741,7 +741,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "История значений переменных"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`VarID` |Переменная |`refid` | |
@@ -758,7 +758,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Значения истории переменной"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ChangeDate` |Дата изменения |`datetime` | |
@@ -775,7 +775,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -802,7 +802,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Подчиненные задачи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ResolutionID` |Задача |`refcardid` | a|
@@ -826,7 +826,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отчеты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ReportID` |Отчет |`refcardid` | a|
@@ -860,7 +860,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Ссылки исполнителя"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -882,7 +882,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`PerformingMode` |`11BDD6F8-67C3-482A-8A99-51756DA18438` |Режим исполнения
@@ -892,7 +892,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`PerformerMode` |`D20B65A9-1404-416B-9A16-D9B4A6055E90` |Режим исполнителя
