--- a/modules/schemas/pages/release/Workflow/Monitor.adoc
+++ b/modules/schemas/pages/release/Workflow/Monitor.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Общее описание"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefreshRate` |Частота обновления |`int` | |
