--- a/modules/schemas/pages/standard-card-fields.adoc
+++ b/modules/schemas/pages/standard-card-fields.adoc
@@ -11,7 +11,7 @@
 
 == Описание полей стандартных карточек {dv} 5.5
 
-[width="100%",cols="25%,75%",options="header"]
+[cols="25%,75%",options="header"]
 |===
 |Библиотека |Карточки
 .34+|{bo} |xref:release/BackOffice/CardCalendar.adoc[Бизнес-календарь]
