--- a/modules/schemas/pages/release/ApprovalDesigner/CardApprovalPath.adoc
+++ b/modules/schemas/pages/release/ApprovalDesigner/CardApprovalPath.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -29,7 +29,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -44,7 +44,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Бизнес-процесс |`refcardid` | a|
@@ -67,7 +67,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` | |
@@ -92,7 +92,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Карта этапов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Stage` |Этап |`refcardid` | a|
@@ -114,7 +114,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Состояния"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DocumentKind` |Вид документа |`refid` | |
