--- a/modules/schemas/pages/release/ApprovalDesigner/CardApprovalResult.adoc
+++ b/modules/schemas/pages/release/ApprovalDesigner/CardApprovalResult.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`StageId` |Идентификатор этапа |`refcardid` | |Идентификатор типа: `0DB13C90-21B6-49D8-9070-8144DF97552A`
