--- a/modules/schemas/pages/release/BackOffice/CardCalendar.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardCalendar.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -28,7 +28,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Года"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Year` |Год |`int` | |
@@ -44,7 +44,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Дни"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DayNumber` |Номер дня |`int` | |
@@ -64,7 +64,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Рабочее время"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`StartTime` |Начальное время |`Time` | |
@@ -79,7 +79,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Стандартное рабочее время"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`StartTime` |Начальное время |`Time` | |
