--- a/modules/schemas/pages/release/BackOffice/CardCategoryList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardCategoryList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
