--- a/modules/schemas/pages/release/BackOffice/CardFileList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardFileList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`File` |Файл |`refcardid` | a|
