--- a/modules/schemas/pages/release/BackOffice/CardReconcileLog.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardReconcileLog.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -29,7 +29,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -44,7 +44,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Бизнес-процесс |`refcardid` | a|
@@ -67,7 +67,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardID` |Карточка документа |`refcardid` | |Идентификатор типа: `B9F7BFD7-7429-455E-A3F1-94FFB569C794`
@@ -89,7 +89,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Таблица истории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`OrderNum` |Номер |`int` | |
@@ -120,7 +120,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileId` |Файл |`refcardid` | a|
@@ -151,7 +151,7 @@
 * Тип секции: `coll`
 
 .Поля секции "История подписей"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Cycle` |Номер цикла |`int` | |
