--- a/modules/schemas/pages/release/BackOffice/CardReconcilePath.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardReconcilePath.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -29,7 +29,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -44,7 +44,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessID` |Бизнес-процесс |`refcardid` | a|
@@ -67,7 +67,7 @@
 * Тип секции: `coll`
 
 .Поля секции "ReconcileOrderTable"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -99,7 +99,7 @@
 * Тип секции: `struct`
 
 .Поля секции "MainInfo"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unitext` | |
