--- a/modules/schemas/pages/release/BackOffice/CardReferenceList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardReferenceList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип ссылки |`refid` | |
