--- a/modules/schemas/pages/release/BackOffice/CardSignatureList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardSignatureList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Подписи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Signer` |Подписант |`refid` | |
@@ -38,7 +38,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Части подписи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Description` |Описание |`unistring` |1024 |
