--- a/modules/schemas/pages/release/BackOffice/CardTask.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTask.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Задание"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |480 |
@@ -93,7 +93,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
@@ -111,7 +111,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Назначенные исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -126,7 +126,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Системные свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -141,7 +141,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumericPart` |Числовая часть |`refid` | |
@@ -156,7 +156,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Ссылка на процесс |`refcardid` | a|
@@ -175,7 +175,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Текущие исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -190,7 +190,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Список делегирования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Return` |Признак возврата с делегирования |`bool` | |
@@ -217,7 +217,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -232,7 +232,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Кому делегировано"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -247,7 +247,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Актуальные делегаты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | a|.Поля ссылки:
@@ -262,7 +262,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Author` |Автор комментария |`refid` | |
@@ -278,7 +278,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AllowDelegateToAnyEmployee` |Разрешено делегирование вручную любому сотруднику |`bool` | |
@@ -300,7 +300,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройка исполнителей"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Employee` |Сотрудник |`refid` | |
@@ -318,7 +318,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройка основных типов ссылок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LinkType` |Тип ссылки |`refid` | |
@@ -333,7 +333,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройка дополнительных типов ссылок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LinkType` |Тип ссылки |`refid` | |
@@ -348,7 +348,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройка типов ссылок отчётов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LinkType` |Тип ссылки |`refid` | |
@@ -363,7 +363,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройки копирования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionPath` |Путь к секции |`unistring` | |
@@ -381,7 +381,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки завершения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ReportFileRequired` |Запрашивать файл отчёта |`bool` | |
@@ -416,7 +416,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Варианты завершения "
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`IconFileId` |Иконка |`fileid` | |
@@ -436,7 +436,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Дополнительные атрибуты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionId` |Идентификатор секции |`uniqueid` | |
@@ -456,7 +456,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки вида подчинённого задания"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ChildTaskKindType` |Режим создания подчинённого задания |`enum` | a|.Значения:
@@ -475,7 +475,7 @@
 * Тип секции: `tree`
 
 ."Поля секции "Виды, доступные для создания подчинённого задания"_
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Creatable` |Создаваемый |`bool` | |
@@ -490,7 +490,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки маршрутизации"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RoutingType` |Маршрутизация |`enum` | a|.Значения:
@@ -509,7 +509,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки вида подчиненной группы заданий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ChildTaskGroupKindType` |Режим создания подчиненной группы заданий |`enum` | a|.Значения:
@@ -528,7 +528,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Виды, доступные для создания подчиненной группы заданий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Creatable` |Создаваемый |`bool` | |
@@ -543,7 +543,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки Почтового клиента"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`MessageXslt` |Xslt письма о новом задании |`string` | |
@@ -559,7 +559,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Согласование"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Reconciliation` |Согласование |`refcardid` | a|
@@ -602,7 +602,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Дополнительные согласующие"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Approver` |Согласующий |`refid` | |
@@ -616,7 +616,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Дополнительные файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`File` |Файл |`refcardid` | a|
@@ -646,7 +646,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройки дерева версий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileId` |Идентификатор файла |`refcardid` | a|
@@ -665,7 +665,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Файлы только для чтения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`File` |Файл |`refcardid` | a|
