--- a/modules/schemas/pages/release/BackOffice/CardTaskList.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTaskList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Задания"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Task` |Задание |`refcardid` | a|
@@ -34,7 +34,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Группы заданий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TaskGroup` |Группа заданий |`refcardid` | a|
