--- a/modules/schemas/pages/release/BackOffice/RefLayouts.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefLayouts.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки вида карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardKindID` |Вид карточки |`refid` | a|.Поля ссылки:
@@ -31,7 +31,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Разметки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ToolbarLayout` |Разметка панели инструментов |`unitext` | |
@@ -61,7 +61,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализации"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Локализация |`int` | |
@@ -77,7 +77,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`PropertyName` |Название свойства |`unistring` | |
@@ -106,7 +106,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Атрибуты столбца"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Caption` |Заголовок |`unistring` | |
@@ -135,7 +135,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Атрибуты разметки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TabIndex` |Индекс обхода |`int` | |
@@ -164,7 +164,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Дерево дизайнов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NodeType` |Тип узла |`enum` | a|.Значения:
@@ -190,7 +190,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Разметки узла"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LayoutID` |Разметка |`refid` | |
