--- a/modules/schemas/pages/release/BackOffice/RefLinks.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefLinks.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Типы ссылок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LinkName` |Название ссылки |`unistring` |128 |
