--- a/modules/schemas/pages/release/BackOffice/RefNavExtension.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefNavExtension.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "RequiredSection"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RequiredField` |RequiredField |`bool` | |
