--- a/modules/schemas/pages/release/BackOffice/RefPartners.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefPartners.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Подразделения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |1024 |
@@ -68,7 +68,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FirstName` |Имя |`unistring` |32 |
@@ -111,7 +111,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Падежи имени"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NameCase` |Падеж имени |`enum` | a|.Значения:
@@ -134,7 +134,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства для сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -191,7 +191,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления для сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -206,7 +206,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -221,7 +221,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Адреса"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AddressType` |Тип адреса |`enum` | a|.Значения:
@@ -242,7 +242,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Контакты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип |`enum` | a|.Значения:
@@ -263,7 +263,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Коды"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -278,7 +278,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Банковские реквизиты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`BankName` |Название банка |`unistring` |128 |
@@ -296,7 +296,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля сотрудников подразделения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -313,7 +313,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля подчиненных подразделений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -330,7 +330,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -420,7 +420,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -435,7 +435,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -450,7 +450,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Разделы свойств"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SectionName` |Название раздела |`unistring` |128 |
@@ -475,7 +475,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Формат отображения сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -493,7 +493,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Должности"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |1024 |
@@ -514,7 +514,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Обращения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |32 |
@@ -529,7 +529,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Типы юридических лиц"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |1024 |
@@ -543,7 +543,7 @@
 * Тип секции: `tree`
 
 ."Поля секции "Группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -560,7 +560,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Группа"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DepartmentID` |Подразделение |`refid` | a|.Поля ссылки:
@@ -578,7 +578,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -595,7 +595,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Пользовательские настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Reserved` |Зарезервировано |`bool` | |
@@ -627,7 +627,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -644,7 +644,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля подразделений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -661,7 +661,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Отображаемые поля группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -678,7 +678,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Уникальные атрибуты организации"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Operation` |Операция |`enum` | a|.Значения:
@@ -696,7 +696,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Поля"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FieldId` |Идентификатор поля |`uniqueid` | |
