--- a/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefRoleModel.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки прав"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Kind` |Вид карточки |`refid` | |
@@ -31,7 +31,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Роли"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Наименование |`unistring` | |
@@ -47,7 +47,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Группы условий"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Operation` |Операция группы условий |`enum` | a|.Значения:
@@ -65,7 +65,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Условия"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Parameter` |Параметр |`enum` | a|.Значения:
@@ -157,7 +157,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Соответствие между операциями и состояниями"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State` |Состояние |`refid` | |
@@ -177,7 +177,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Пользовательские параметры"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` | |
@@ -197,7 +197,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Пользовательские операции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` | |
