--- a/modules/schemas/pages/release/BackOffice/RefScripting.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefScripting.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Скрипты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Code` |Код скрипта |`refid` | |
@@ -33,7 +33,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Используемые сборки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Path` |Путь |`unistring` | |
@@ -47,7 +47,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Тексты скриптов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Code` |Код скрипта |`unitext` | |
