--- a/modules/schemas/pages/release/BackOffice/RefServers.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefServers.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ServerCardKind` |Вид карточки сервера |`refid` | |
@@ -28,7 +28,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Серверы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ServerId` |Идентификатор сервера |`uniqueid` | |
