--- a/modules/schemas/pages/release/BackOffice/RefSignatureLabels.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefSignatureLabels.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Метки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Label` |Метка |`unistring` |64 |
@@ -31,7 +31,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализованные имена меток"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Локализация |`int` | |
