--- a/modules/schemas/pages/release/BackOffice/RefStates.adoc
+++ b/modules/schemas/pages/release/BackOffice/RefStates.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки прав"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Kind` |Вид карточки |`refid` | |
@@ -32,7 +32,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Операции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`EditModeOnly` |Доступна только в режиме редактирования |`bool` | |
@@ -50,7 +50,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализованные названия операций"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Локализация |`int` | |
@@ -65,7 +65,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Описание операций"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Локализация |`int` | |
@@ -80,7 +80,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Состояния"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DefaultName` |Название по умолчанию |`unistring` | |
@@ -98,7 +98,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализованные имена состояний"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Локализация |`int` | |
@@ -113,7 +113,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Переходы автомата состояний"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`StartState` |Начальное состояние |`refid` | |
@@ -137,7 +137,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Разметки автомата состояний"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`State`MachineLayout` |Разметка автомата состояний |`unitext` | |
