--- a/modules/schemas/pages/release/Core/Folders.adoc
+++ b/modules/schemas/pages/release/Core/Folders.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Общая информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ViewCardID` |Идентификатор карточки представлений |`refcardid` | |Идентификатор типа: `17F8F0B3-7E93-45E9-B250-EED4E93F3FA3`
@@ -29,7 +29,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название папки |`unistring` |256 |
@@ -71,7 +71,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ярлыки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardID` |Идентификатор карточки |`refcardid` | |
@@ -91,7 +91,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ограничения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Идентификатор типа карточки |`uniqueid` | |
@@ -106,7 +106,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Представления папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ViewID` |Идентификатор представления |`uniqueid` | |
@@ -121,7 +121,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Шаблоны папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TemplateID` |Поле |`refid` | |
@@ -135,7 +135,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Параметры поискового запроса"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ParameterID` |Идентификатор параметра |`string` | |
@@ -151,7 +151,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Подтипы папки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SubTypeID` |Идентификатор подтипа папки |`uniqueid` | |
@@ -166,7 +166,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -181,7 +181,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Значки папок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Icon` |Значок папки |image` | |
