--- a/modules/schemas/pages/release/Core/MandatoryAccess.adoc
+++ b/modules/schemas/pages/release/Core/MandatoryAccess.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Уровни безопасности"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Level` |Уровень |`int` | |
@@ -33,7 +33,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Доступ сотрудников"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AccountName` |Учетная запись |`unistring` |128 |
