--- a/modules/schemas/pages/release/Core/Navigator.adoc
+++ b/modules/schemas/pages/release/Core/Navigator.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Общая информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FolderCardID` |Идентификатор карточки папок |`uniqueid` | |
@@ -30,7 +30,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки представлений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ViewID` |Идентификатор представления |`refid` | |
@@ -77,7 +77,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки колонок"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Caption` |Название колонки |`unistring` |32 |
@@ -108,7 +108,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -123,7 +123,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сортировки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ColumnName` |Колонка для сортировки |`unistring` |32 |
@@ -140,7 +140,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Группировки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ColumnName` |Название колонки |`unistring` |32 |
@@ -179,7 +179,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -194,7 +194,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`AggregationText` |Локализованный текст агрегации |`unistring` |64 |
@@ -209,7 +209,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Шаблоны"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название шаблона |`unistring` |32 |
@@ -224,7 +224,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ObjectID` |Идентификатор объекта |`uniqueid` | |
