--- a/modules/schemas/pages/release/Core/Numerator.adoc
+++ b/modules/schemas/pages/release/Core/Numerator.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Атрибуты нумератора"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название нумератора |`unistring` |64 |
@@ -31,7 +31,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Зоны нумератора"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ZoneName` |Название зоны |`unistring` |32 |
@@ -47,7 +47,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Занятые номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Number` |Номер |`int` | |
@@ -61,7 +61,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свободные диапазоны"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FirstNumber` |Начальный номер |`int` | |
@@ -77,7 +77,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Диапазоны нумератора"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FirstNumber` |Начальный номер |`int` | |
