--- a/modules/schemas/pages/release/Core/SavedSearches.adoc
+++ b/modules/schemas/pages/release/Core/SavedSearches.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Группы запросов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Имя |`unistring` |256 |
@@ -30,7 +30,7 @@
 * Тип секции: `coll`
 
 .Поля секции "сохранённые поисковые запросы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -52,7 +52,7 @@
 * Тип секции: `coll`
 
 .Поля секции "сохранённые разметки поисковых запросов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -68,7 +68,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -83,7 +83,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
