--- a/modules/schemas/pages/release/Core/SavedViews.adoc
+++ b/modules/schemas/pages/release/Core/SavedViews.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Группы представлений"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Имя |`unistring` |256 |
@@ -30,7 +30,7 @@
 * Тип секции: `coll`
 
 .Поля секции "сохранённые представления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название представления |`unistring` |128 |
@@ -51,7 +51,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сортировка"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`string` |128 |
@@ -67,7 +67,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Локализация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -82,7 +82,7 @@
 * Тип секции: `coll`
 
 .Поля секции "LocalizationsGroups"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`LocaleID` |Идентификатор локали |`int` | |
@@ -97,7 +97,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Секции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Идентификатор типа |`uniqueid` | |
@@ -113,7 +113,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Виртуальные поля"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Имя |`unistring` |128 |
