--- a/modules/schemas/pages/release/Core/Settings.adoc
+++ b/modules/schemas/pages/release/Core/Settings.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Расширения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -31,7 +31,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Группы настроек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -47,7 +47,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип свойства |`int` | |
@@ -63,7 +63,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Приложения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор приложения |`uniqueid` | |
