--- a/modules/schemas/pages/release/Core/UserProfile.adoc
+++ b/modules/schemas/pages/release/Core/UserProfile.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DefaultFolderID` |Папка пользователя |`refid` | |
@@ -31,7 +31,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ObjectID` |Идентификатор объекта |`uniqueid` | |
@@ -49,7 +49,7 @@
 * Тип секции: `coll`
 
 .Поля секции "История поисковых запросов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Query` |Запрос |`string` |2048 |
