--- a/modules/schemas/pages/release/TakeOffice/AgentSettings.adoc
+++ b/modules/schemas/pages/release/TakeOffice/AgentSettings.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Общие настройки поиска"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
@@ -37,7 +37,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Пользователи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`EmployeeID` |Сотрудник |`refid` | |
@@ -53,7 +53,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Настройки поиска пользователя"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
