--- a/modules/schemas/pages/release/TakeOffice/CardFile.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardFile.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FileID` |Файл документа |`refcardid` | a|
@@ -57,7 +57,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -108,7 +108,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ValueID` |ID значения |`int` | |
@@ -123,7 +123,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -139,7 +139,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -149,7 +149,7 @@
 == Режимы работы карточки
 
 .Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`A8F0DE88-D1D6-4D69-A9B7-797E27D5037F` |Открытие карточки
@@ -160,7 +160,7 @@
 == Действия карточки
 
 .Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`BDC2A24B-C092-4710-ACB2-5B04E2E98773` |Открыть карточку
