--- a/modules/schemas/pages/release/TakeOffice/CardInc.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardInc.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема документа |`unistring` |512 |
@@ -93,7 +93,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип ссылки |`refid` | a|.Поля ссылки:
@@ -119,7 +119,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -177,7 +177,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -192,7 +192,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -208,7 +208,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -223,7 +223,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Задачи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ResolutionID` |Задача |`refcardid` | a|
@@ -244,7 +244,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ApprovalID` |Согласование |`refcardid` | a|
@@ -265,7 +265,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -295,7 +295,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Бизнес-процесс |`refcardid` | a|
@@ -320,7 +320,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Журнал передач"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`IsReceived` |Принято |`bool` | |
@@ -342,7 +342,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`E45F4F96-4F18-47E1-9225-841F38A371ED` |Открыть карточку
@@ -351,7 +351,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`32CFD070-842A-47AA-A223-DF1D95C8819B` |Открыть карточку
