--- a/modules/schemas/pages/release/TakeOffice/CardReport.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardReport.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема |`unistring` |544 |
@@ -86,7 +86,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сопроводительные ссылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -111,7 +111,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки отчета"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -136,7 +136,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -166,7 +166,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CreationDate` |Дата комментария |`datetime` | |
@@ -186,7 +186,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -244,7 +244,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -259,7 +259,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -275,7 +275,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
