--- a/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardResolution.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |544 |
@@ -119,7 +119,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`RefType` |Тип ссылки |`enum` | a|.Значения:
@@ -145,7 +145,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Исполнители"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок исполнения |`int` | |
@@ -221,7 +221,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Делегаты"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DelegateType` |Тип делегата |`enum` | a|.Значения:
@@ -250,7 +250,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Задания отдельных сотрудников группы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TaskID` |Задание исполнителя |`refcardid` | a|
@@ -268,7 +268,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Комментарии"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Comment` |Комментарий |`unistring` |2048 |
@@ -287,7 +287,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -345,7 +345,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -360,7 +360,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -376,7 +376,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -391,7 +391,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Настройки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CanReject` |разрешён отказ от исполнения |`bool` | |
@@ -423,7 +423,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Виды документов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Вид |`refid` | a|.Поля ссылки:
@@ -439,7 +439,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Сотрудники"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядковый номер |`int` | |
@@ -466,7 +466,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Уведомления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Event` |Cобытие |`enum` | a|.Значения:
@@ -498,7 +498,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`Perform` |`C41DEA16-756C-4699-8CFE-9C74AD4B46C3` |Исполнение
@@ -509,7 +509,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`Edit` |`08329579-FE6C-40D9-9D88-FA682B986164` |Режим редактирования
