--- a/modules/schemas/pages/release/TakeOffice/CardUni.adoc
+++ b/modules/schemas/pages/release/TakeOffice/CardUni.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Тема документа |`unistring` |512 |
@@ -40,7 +40,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на карточки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Type` |Тип ссылки |`refid` | a|.Поля ссылки:
@@ -66,7 +66,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Свойства"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название свойства |`unistring` |128 |
@@ -124,7 +124,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечисления"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value`ID` |ID значения |`int` | |
@@ -139,7 +139,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Выбранные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`SelectedValue` |Выбранное значение |`variant` | |
@@ -155,7 +155,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Категории"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CategoryID` |Категория |`refid` | a|.Поля ссылки:
@@ -170,7 +170,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Задачи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ResolutionID` |Задача |`refcardid` | a|
@@ -191,7 +191,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Согласования"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ApprovalID` |Согласование |`refcardid` | a|
@@ -212,7 +212,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Бизнес-процессы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ProcessId` |Бизнес-процесс |`refcardid` | a|
@@ -237,7 +237,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Журнал передач"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`IsReceived` |Принято |`bool` | |
@@ -259,7 +259,7 @@
 == Режимы работы карточки
 
 ."Режимы работы карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`B6752FF8-CB5B-4D63-9D32-A406ED0938C1` |Открыть карточку
@@ -268,7 +268,7 @@
 == Действия карточки
 
 ."Действия карточки
-[width="100%",cols="34%,33%,33%",options="header"]
+[cols="34%,33%,33%",options="header"]
 |===
 |Псевдоним |Идентификатор |Описание
 |`OpenCard` |`016D90E6-EC47-4EFD-A4A7-7D57ED00381C` |Открыть карточку
