--- a/modules/schemas/pages/release/TakeOffice/FileList.adoc
+++ b/modules/schemas/pages/release/TakeOffice/FileList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Ссылки на файлы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardFileID` |Карточка файла |`refcardid` | a|
@@ -49,7 +49,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Count` |Количество файлов |`int` | |
