--- a/modules/schemas/pages/release/TakeOffice/NavCommands.adoc
+++ b/modules/schemas/pages/release/TakeOffice/NavCommands.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Команды"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |256 |
@@ -38,7 +38,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Виды карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Вид |`uniqueid` | |
