--- a/modules/schemas/pages/release/TakeOffice/NavExtensions.adoc
+++ b/modules/schemas/pages/release/TakeOffice/NavExtensions.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Основная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Field1 |Field1 |`int` | |
