--- a/modules/schemas/pages/release/TakeOffice/RefCases.adoc
+++ b/modules/schemas/pages/release/TakeOffice/RefCases.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `tree`
 
 .Поля секции "Дела"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название дела |`unistring` |256 |
@@ -43,7 +43,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Тома"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название тома |`unistring` |256 |
@@ -61,7 +61,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Формат отображения дела"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -79,7 +79,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Статусы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |128 |
