--- a/modules/schemas/pages/release/TakeOffice/RefNumerators.adoc
+++ b/modules/schemas/pages/release/TakeOffice/RefNumerators.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Нумераторы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`NumeratorID` |Нумератор |`refcardid` | a|
@@ -60,7 +60,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Виды документов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DocTypeID` |Вид документа |`refid` | a|.Поля ссылки:
@@ -77,7 +77,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Подразделения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`DepartmentID` |Подразделение |`refid` | a|.Поля ссылки:
@@ -94,7 +94,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Дела"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CaseID` |Дело |`refid` | a|.Поля ссылки:
@@ -111,7 +111,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Тома"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FolderID` |Том |`refid` | a|.Поля ссылки:
@@ -128,7 +128,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Поля номера"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Order` |Порядок |`int` | |
@@ -160,7 +160,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Пользовательские типы карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardTypeID` |Тип карточки |`uniqueid` | |
