--- a/modules/schemas/pages/release/Workflow/FunctionList.adoc
+++ b/modules/schemas/pages/release/Workflow/FunctionList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Общая информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |64 |
@@ -38,7 +38,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Преднастроенные функции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |2048 |
