--- a/modules/schemas/pages/release/Workflow/GateList.adoc
+++ b/modules/schemas/pages/release/Workflow/GateList.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Общая информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |64 |
@@ -36,7 +36,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Дополнительная информация"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Definition` |Данные описания шлюза |`unitext` | |
