--- a/modules/schemas/pages/release/Workflow/Process.adoc
+++ b/modules/schemas/pages/release/Workflow/Process.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Общее описание"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Название |`unistring` |512 |
@@ -111,7 +111,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Типы инициирующих документов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`TypeID` |Идентификатор типа |`uniqueid` | |
@@ -126,7 +126,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Шлюзы"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
@@ -144,7 +144,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Переменные"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
@@ -178,7 +178,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения перечислителя"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
@@ -194,7 +194,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Журнал значений переменной"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ChangeDate` |Дата изменения |`datetime` | |
@@ -211,7 +211,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Значения переменной"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value` |Значение |`variant` | |
@@ -229,7 +229,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Дополнительные значения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value` |Значение |`unitext` | |
@@ -243,7 +243,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Дополнительное значение"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Value` |Значение |`unitext` | |
@@ -257,7 +257,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Функции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
@@ -308,7 +308,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Состояния функции в проходах"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор прохода |`uniqueid` | |
@@ -344,7 +344,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Предшествующие ограничения"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`PrevFunction` |Предыдущая функция |`unistring` |128 |
@@ -358,7 +358,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Данные прохода"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Data` |Данные прохода |`unitext` | |
@@ -372,7 +372,7 @@
 * Тип секции: `struct`
 
 ."Поля секции "Данные функции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Data` |Данные функции |`unitext` | |
@@ -386,7 +386,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "История мониторинга"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Source` |Источник |`unistring` |128 |
@@ -402,7 +402,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Подписки функции"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`GateInstanceID` |Идентификатор экземпляра шлюза |`uniqueid` | |
@@ -423,7 +423,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Связи"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
@@ -450,7 +450,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Журнал"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`FunctionName` |Имя функции |`unistring` |128 |
@@ -475,7 +475,7 @@
 * Тип секции: `coll`
 
 ."Поля секции "Очередь сообщений процесса"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ID` |Идентификатор |`uniqueid` | |
