--- a/modules/schemas/pages/release/Workflow/Settings.adoc
+++ b/modules/schemas/pages/release/Workflow/Settings.adoc
@@ -14,7 +14,7 @@
 * Тип секции: `struct`
 
 .Поля секции "Настройки пользователя"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ShowExportDialog` |Показывать диалог при экспорте |`bool` | |
@@ -32,7 +32,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Сборки"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Name` |Имя сборки |`unistring` |2048 |
@@ -48,7 +48,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Данные шлюзов"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`GateID` |Идентификатор |`uniqueid` | |
@@ -64,7 +64,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Экземпляры шлюза"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`Settings` |Настройки |`unistring` |2048 |
@@ -78,7 +78,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Идентификаторы изменившихся карточек"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`CardID` |Идентификатор карточки |`uniqueid` | |
@@ -93,7 +93,7 @@
 * Тип секции: `coll`
 
 .Поля секции "Информация о сервисах Workflow"
-[width="100%",cols="20%,20%,20%,20%,20%",options="header"]
+[cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |`ServiceID` |Идентификатор сервиса |`unistring` |50 |
